# OpenCV-practice-codes

PaintBrush_v1/: CMakeLists.txt  draw.hpp  event.hpp  icon_flag.hpp  main.cpp  menu.hpp
classify_carNumber/: CMakeLists.txt  SVM.hpp  candiate.hpp  classify_objects.hpp  kNN.hpp  main.cpp  preprocess.hpp
coin_classify_v1/: CMakeLists.txt  main.cpp  preprocess.hpp
cv_test01/: CMakeLists.txt  main.cpp
cv_test02/: CMakeLists.txt  main.cpp
cv_test03/: CMakeLists.txt  main.cpp
face_detect_v3/: CMakeLists.txt  correct_angle.hpp  detect_area.hpp  main.cpp  preprocess.hpp
histo_v1/: CMakeLists.txt  histo.hpp  main.cpp  utils.hpp
histo_v2/: CMakeLists.txt  histo.hpp  main.cpp  utils.hpp
paintingtool_0425/: CMakeLists.txt  icon_flag.hpp  main.cpp  menu.hpp
